--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "repositories": [
         {
             "type": "git",
-            "url": "https://github.com:t3ugn/t3ugn-site.git"
+            "url": "https://github.com/t3ugn/t3ugn-site.git"
         }
     ],
     "require-dev": {
